# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
config("e2fsprogs-defaults") {
  cflags = [
    "-Wall",
    "-Werror",
    "-Wno-incompatible-pointer-types",
    "-Wno-unused-function",
    "-Wno-unused-parameter",
    "-Wno-format",
  ]
}
config("libf2fs-headers") {
  include_dirs = [ 
      ".",
      "//third_party/e2fsprogs/f2fs-tools-1.14.0",
      "//third_party/e2fsprogs/f2fs-tools-1.14.0/include",
    ]
}

ohos_shared_library("libf2fs") {
  sources = [
    "libf2fs_io.c",
    "libf2fs_zoned.c",
    "libf2fs.c",
    "nls_utf8.c",
  ]
  
  include_dirs = [ "." ]

  configs = [
    ":e2fsprogs-defaults",
    ":libf2fs-headers",
  ]

  defines = [ "HAVE_CONFIG_H" ]
  install_enable = true
  subsystem_name = "storage_manager"
  part_name = "storage_standard"
  install_images = [
    "system",
  ]
}
