# Copyright (c) 2021 Huawei Device Co., Ltd.
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License version 2 as
# published by the Free Software Foundation.

import("//build/ohos.gni")
config("f2fs-defaults") {
  cflags = [
    "-Wall",
    "-Werror",
    "-Wno-incompatible-pointer-types",
    "-Wno-unused-function",
    "-Wno-unused-parameter",
    "-Wno-format",
  ]
}
config("libf2fs-headers") {
  include_dirs = [
    ".",
    "//third_party/f2fs-tools",
    "//third_party/f2fs-tools/include",
  ]
}

ohos_shared_library("libf2fs") {
  sources = [
    "libf2fs.c",
    "libf2fs_io.c",
    "libf2fs_zoned.c",
    "nls_utf8.c",
  ]

  include_dirs = [ "." ]

  configs = [
    ":f2fs-defaults",
    ":libf2fs-headers",
  ]

  defines = [ "HAVE_CONFIG_H" ]
  install_enable = true
  subsystem_name = "thirdparty"
  part_name = "f2fs_tools"
  install_images = [
    "system",
    "updater",
  ]
}
