# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
config("e2fsprogs-defaults") {
  cflags = [ 
        "-Wno-pointer-sign",
        "-Wno-unused-variable",
        "-Wno-string-plus-int",
        "-Wno-error=format",
  ]
}

###################################################
##Build mkfs.f2fs
ohos_executable("mkfs.f2fs") {
  configs = [ ":e2fsprogs-defaults" ]
  sources = [
        "f2fs_format_main.c",
        "f2fs_format_utils.c",
        "f2fs_format.c",
  ]

  include_dirs = [
    ".",
    "//third_party/e2fsprogs/lib/uuid",
    "//third_party/e2fsprogs/f2fs-tools-1.14.0",
    "//third_party/e2fsprogs/f2fs-tools-1.14.0/include",
    "//third_party/e2fsprogs/f2fs-tools-1.14.0/lib",
  ]

  deps = [
    "//third_party/e2fsprogs/lib/uuid:libext2_uuid",
    "//third_party/e2fsprogs/f2fs-tools-1.14.0/lib:libf2fs",
  ]
  
  defines = [
    "HAVE_CONFIG_H",
  ]

  # ldflags = [ "-stdlib=libc++_static" ]
  install_enable = true
  subsystem_name = "storage_manager"
  part_name = "storage_standard"
  install_images = [
    "system",
  ]
}
